# clinifs

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
clinifs/: __init__.py  __main__.py  _prefilter.py
clinifs/aggregators/: __init__.py  rra.py
clinifs/evaluation/: __init__.py  stability.py
clinifs/selectors/: __init__.py  classical.py  embedded.py  evolutionary.py  filter.py
docs/: API.md  reproduce_paper.md
examples/: README.md  build_example_data.py  example_labels.csv  example_microarray.csv  quickstart.py
tests/: test_smoke.py
